# slurm_job

./: .editorconfig  .gitignore  .pylintrc  README.md  listener.py  pyproject.toml  watcher.py
.github/workflows/: pypi.yml
pyjob/: __main__.py  core.py  local.py  slurm.py  utils.py  xenon_slurm.py  xenon_templates.py
slurm_job/: __main__.py  core.py  local.py  slurm.py  utils.py  xenon_slurm.py
tests/: test_local.py  test_slurm.py
